--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.19.5
+Date: 2025-10-30
+  Changes:
+    - added Crane stack diesel inserter with it's research and own recipe
+    - graphics-fix: Crane bulk diesel inserter no longer clip on belt
+    - marked barreling machine mods as incompatible. Pelagos adds it's own barreling machine and don't lock away ability to use regular barrels with assemblers.
+    - fix: regular assembling machine 3 no longer can use titanium barrels, it was added by accident. Ability to use titanium barrels should be locked only to diesel assembler and barreling machine
+  Balancing:
+    - changed heavy-gun-turret health (800 -> 1200)
+---------------------------------------------------------------------------------------------------
 Version: 0.19.4
 Date: 2025-10-26
   Changes:
