--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.21.0
+Date: 2025-10-31
+  Changes:
+    - added 4k planet star map graphic and changed icon
+---------------------------------------------------------------------------------------------------
 Version: 0.20.0
 Date: 2025-10-30
   Changes:
