renaming collision layers

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.27.1
+Date: 2025-11-23
+  Changes:
+    - increased soundtrack volume (0.4 -> 0.8)
+  Balancing:
+    - reduced EM pollution for beacons (2->1)
+---------------------------------------------------------------------------------------------------
 Version: 0.27.0
 Date: 2025-11-22
   Changes:
