lab + beacon + space science aps

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.28.2
+Date: 2025-11-30
+  Balancing:
+    - reduced beacon EM pollution (1->0.5)
+    - reduced lab EM pollution (1->0.5)
+    - any planet start: changed Pelagos space science recipe (water 20 -> 10)
+---------------------------------------------------------------------------------------------------
 Version: 0.28.1
 Date: 2025-11-30
   Changes:
