--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.31.0
+Date: 2025-12-07
+  Changes:
+    - any planet start: Nauvis no longer has save orbit
+    - Updated excavator code based on new changes made to it's API
+---------------------------------------------------------------------------------------------------
 Version: 0.30.0
 Date: 2025-12-05
   Changes:
