--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.32.1
+Date: 2025-12-10
+  Changes:
+    - fixed calciner pipe connection graphics
+---------------------------------------------------------------------------------------------------
 Version: 0.32.0
 Date: 2025-12-10
   Changes:
