--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.32.2
+Date: 2025-12-10
+  Changes:
+    - improved quality of calciner texture 
+---------------------------------------------------------------------------------------------------
 Version: 0.32.1
 Date: 2025-12-10
   Changes:
