--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.32.3
+Date: 2025-12-10
+  Changes:
+    - calciner working flame effect should now be aligned properly with new sprite
+---------------------------------------------------------------------------------------------------
 Version: 0.32.2
 Date: 2025-12-10
   Changes:
-    - improved quality of calciner texture 
+    - improved calciner sprite
 ---------------------------------------------------------------------------------------------------
 Version: 0.32.1
 Date: 2025-12-10
