--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.35.0
+Date: 2025-12-22
+  Balancing:
+  Changes:
+    - added compatibility: Multi-Surface Promethium Plate Recipe mod
+    - any planet start: tree seeding is now prerequisite to going to nauvis
+    - new recipe: fermentation bacteria breeding (fermented fish)
+  Balancing:
+    - item changed: fermented fish spoil time changed (2h -> 4h)
+    - recipe changed: fermented fish recipe result increased (5->10)
+---------------------------------------------------------------------------------------------------
 Version: 0.34.0
 Date: 2025-12-17
-  Balancing:
   Changes:
     - Recipe Removed: biodiesel from bioflux 
     - Recipe Added: biodiesel from spoilage
