--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.36.0
+Date: 2025-12-25
+  Balancing:
+  Changes:
+    - added required compatibility: Cargo Crates
+    - adjusted cargo crates technology to be part of pelagos tech tree
+    - any planet start: cargo crates have easier tech requirement and science cost compared to normal game
+    - any planet start: I am happy to say that Lignumis have added steam inserter. 
+      That means that my implementation of it is redundant so code responsible for is removed
+    - any planet start: iron pipe recipe for steam inserter is adjusted (4 pipe -> 2 pipe) to match lignumis golden pipe recipe
+  Bugfixes:
+    - delivery drones rocket capacity now has normal value (200->20)
+---------------------------------------------------------------------------------------------------
 Version: 0.35.0
 Date: 2025-12-22
   Balancing:
