Diesel Engine Lib

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.38.0
+Date: 2025-12-27
+  Changes:
+    - separatated core diesel/liquid fuel stuff into separate internal mod
+---------------------------------------------------------------------------------------------------
 Version: 0.37.0
 Date: 2025-12-26
   Balancing:
