--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.38.1
+Date: 2025-12-26
+  Bugfixes:
+    - fixed ships not being diesel powered after previous update
+---------------------------------------------------------------------------------------------------
 Version: 0.38.0
 Date: 2025-12-27
   Changes:
