titanium sludge costs less

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.39.1
+Date: 2025-12-27
+  Balancing:
+    - titanium dust recipe now require less titanium sludge (100->50)
+---------------------------------------------------------------------------------------------------
 Version: 0.39.0
 Date: 2025-12-27
   Changes:
