--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.39.3
+Date: 2025-12-30
+  Changes:
+    - moved setting to enable or disable flamethrower changes from pelagos mod to diesel engine mod
+---------------------------------------------------------------------------------------------------
 Version: 0.39.2
 Date: 2025-12-30
   Bugfixes:
