--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.40.1
+Date: 2026-01-03
+  Bugfixes:
+    - delivery drones now should now have proper research price and recipes.
+---------------------------------------------------------------------------------------------------
 Version: 0.40.0
 Date: 2026-01-03
   Changes:
