--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.43.0
+Date: 2026-01-21
+  Changes:
+    - added new copper spitter graphics made by InanimateLog. Thank you, looks amazing :D
+---------------------------------------------------------------------------------------------------
 Version: 0.42.0
 Date: 2026-01-18
   Changes:
